Ref #111898 - Adjust catégories page list by makung card full-height + fixing tag visibility + evoiding categories repetition

--- a/assets/sass/rennes-hugo/utils/_extend.sass
+++ b/assets/sass/rennes-hugo/utils/_extend.sass
@@ -3,6 +3,7 @@
   background-color: $block-links-card-background
   border: 1px solid var(--color-border)
   border-radius: pxToRem(2)
+  height: 100%
 
   &:hover,
   &:hover a:not(.chip)
